--- a/style.css
+++ b/style.css
@@ -699,21 +699,21 @@ p {
     font-weight: 700;
 }
 
-.social {
+.social-network {
     max-width: 400px;
     margin: auto auto auto auto;
 }
 
 h2 {
-    font-size: 22px;
-    line-height: 1.4em;
-}
-
-h3 {
     font-size: 15px;
     text-transform: uppercase;
     font-weight: 700;
     color: #333333!important;
+}
+
+h3 {
+    font-size: 22px;
+    line-height: 1.4em; 
 }
 
 .med-width-whitespace {
@@ -770,7 +770,7 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #F3976C;
+    background-color: #d35e28;
 }
 
 .tc-white {
@@ -778,7 +778,7 @@ h4 {
 }
 
 .btn-atomic-tangerine {
-    background: #F3976C;
+    background: #d65c24;
     color: #FFFFFF!important;
 }
 
