--- a/style.css
+++ b/style.css
@@ -326,6 +326,8 @@ a:hover {
   float: left;
   margin-top: 4px;
   font-size: 16px;
+  text-decoration: none;
+  list-style-type: none;
 }
 
 .navbar-nav .open .dropdown-menu > li > a {
@@ -704,6 +706,8 @@ p {
 .social-network {
   max-width: 400px;
   margin: auto auto auto auto;
+  color:#ffffff;
+  text-decoration: none;
 }
 
 h2 {
@@ -849,13 +853,13 @@ h4 {
   }
 }
 
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
+@media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
   .b-parallax {
     background-attachment: scroll;
   }
 }
 
-@media only screen and (min-device-width: 1024px) and (max-device-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5) {
+@media only screen and (min-width: 1024px) and (max-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5) {
   .b-parallax {
     background-attachment: scroll;
   }
@@ -874,8 +878,8 @@ h4 {
     position: relative;
   }
   .bloc {
-    padding-left: constant(safe-area-inset-left);
-    padding-right: constant(safe-area-inset-right);
+    padding-left: 10px;
+    padding-right: 10px;
   }
   .bloc-group,
   .bloc-group .bloc {
@@ -885,8 +889,8 @@ h4 {
   .bloc-fill-screen .fill-bloc-top-edge,
   .bloc-fill-screen .fill-bloc-bottom-edge {
     padding: 0 20px;
-    padding-left: constant(safe-area-inset-left);
-    padding-right: constant(safe-area-inset-right);
+    padding-left: 10px;
+    padding-right: 10px;
   }
 }
 
