images optimizations(webP) and contrasts adjustments

--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ a:hover {
 }
 
 .texture-paper::before {
-  background: url("img/texture-paper.png");
+  background: url("img/webP/texture-paper.webp");
   background-size: 280px 280px;
 }
 
@@ -783,7 +783,7 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-  background-color: #885741;
+  background-color: #5e3d2e;
 }
 
 .tc-white {
@@ -791,7 +791,7 @@ h4 {
 }
 
 .btn-atomic-tangerine {
-  background: #6b4c3e;
+  background: #201611;
   color: #ffffff !important;
 }
 
@@ -834,7 +834,7 @@ h4 {
 }
 
 .bg-presentation {
-  background-image: url("img/image-de-presentation.jpg");
+  background-image: url("img/webP/image-de-presentation.webp");
 }
 
 @media (max-width: 1024px) {
